<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".WelcomeActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="324dp"
        android:layout_height="334dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="477dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/raintweetstormcartoonlottie">

    </com.airbnb.lottie.LottieAnimationView>

    <Button
        android:id="@+id/get_started"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="727dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="86dp"
        android:background="@drawable/custom_btn"
        android:text="@string/get_starteds"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="474dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="293dp"
        android:text="@string/discover_the_weather_in_your_city"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="591dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="222dp"
        android:text="@string/get_to_know_your_weather_maps_and_radar_precipitation_forecast"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>